--- a/_data/ui-text.yml
+++ b/_data/ui-text.yml
@@ -1757,6 +1757,52 @@ my: &DEFAULT_MY
 my-MM:
   <<: *DEFAULT_MY
 
-# Another locale
-# --------------
-#
+# Hebrew
+# -----------------
+he-IL: &DEFAULT_HE
+  skip_links                 : "דלג על קישורים"
+  skip_primary_nav           : "קפוץ לניווט ראשי"
+  skip_content               : "קפוץ לתוכן"
+  skip_footer                : "קפוץ לתחתית"
+  page                       : "עמוד"
+  pagination_previous        : "הקודם"
+  pagination_next            : "הבא"
+  breadcrumb_home_label      : "בית"
+  breadcrumb_separator       : "/"
+  menu_label                 : "פתח תפריט"
+  search_label               : "פתח חיפוש"
+  toc_label                  : "בעמוד זה"
+  ext_link_label             : "קישור ישיר"
+  less_than                  : "פחות מ"
+  minute_read                : "קריאה בת דקה"
+  share_on_label             : "שתף"
+  meta_label                 :
+  tags_label                 : "תגיות:"
+  categories_label           : "קטגוריות:"
+  date_label                 : "עודכן:"
+  comments_label             : "השאר תגובה"
+  comments_title             : "תגובות"
+  more_label                 : "למד עוד"
+  related_label              : "אתה עשוי להנות גם מ-"
+  follow_label               : "עקוב:"
+  feed_label                 : "פיד"
+  powered_by                 : "Powered by"
+  website_label              : "אתר"
+  email_label                : "דואר אלקטרוני"
+  recent_posts               : "רשומות אחרונות"
+  undefined_wpm              : "Undefined parameter words_per_minute at _config.yml"
+  comment_form_info          : "Your email address will not be published. Required fields are marked"
+  comment_form_comment_label : "Comment"
+  comment_form_md_info       : "Markdown is supported."
+  comment_form_name_label    : "Name"
+  comment_form_email_label   : "Email address"
+  comment_form_website_label : "Website (optional)"
+  comment_btn_submit         : "Submit comment"
+  comment_btn_submitted      : "Submitted"
+  comment_success_msg        : "Thanks for your comment! It will show on the site once it has been approved."
+  comment_error_msg          : "Sorry, there was an error with your submission. Please make sure all required fields have been completed and try again."
+  loading_label              : "Loading..."
+  search_label_text          : "Enter your search term..."
+  search_placeholder_text    : "Enter your search term..."
+  results_found              : "Result(s) found"
+  back_to_top                : "קפוץ למעלה"
