--- a/_config.yml
+++ b/_config.yml
@@ -274,8 +274,13 @@ defaults:
       type: posts
     values:
       layout: single
-      author_profile: true
-      read_time: true
+      author_profile: false
+      read_time: false
       comments: # true
       share: true
-      related: true
+      related: false
+
+collections:
+  portfolio:
+    output: true
+    permalink: /:collection/:path/
